--- a/css/style.2.css
+++ b/css/style.2.css
@@ -1,23 +1,104 @@
-.container{
-   width:100%;
-   padding-left:15px;
-   padding-right:15px;
-   margin-right:auto;
-   margin-left:auto;
+html, body{
+    margin:0px;
+    font-family:"Nunito Sans",sans-serif;
+    font-weight:400;
 }
-p.lead{
-    font-size:1.5em;
-    text-transform: uppercase;
+p{
+    margin:0px;
 }
 h1{
-    text-transform: uppercase;
+    margin:0px;
+    font-size:3em;
+    font-weight:400;
+    margin-bottom:0.5rem;
+}
+h3{
+    margin:0px;
+    font-size:1.2em;
+    font-weight:400;
+    margin-bottom:0.5rem;
+}
+a{
+    text-decoration: none;
+    color:inherit;
+    cursor: default;
+}
+button{
+    background:none;
+    padding:0px;
+    border:none;
+    outline:none;
+    font:inherit;
+}
+.header{
+    width:100%;
+    background-color:#ecf0f1;
+    padding-top:2em;
+    padding-bottom:2em;
+    margin-bottom:1em;
+}
+.header h3{
+    font-weight:400;
+    font-size:1.2em;
+    margin:0px;
+    margin-bottom:0.5em;
+}
+.header h1{
+    font-size:3.5em;
+    margin-bottom:0;
+}
+.container{
+    padding-left:1em;
+    padding-right:1em;
+}
+hr{
+    border:0.5px solid #CCC;
+    margin-left:1em;
+    margin-right:1em;
+}
+.nav{
+    width:100%;
+    padding-top:1.5em;
+    padding-bottom:1.5em;
+    background-color:#2C3E50;
+    color:#FFF;
     font-weight:600;
 }
-nav span.title{
-    font-size:1.2em;
+.nav h1{
+    font-size:1.12em;
+    font-weight:600;
+    margin-bottom:0px;
 }
-html,body{
-    margin:0;
-    font-family: 'Nunito Sans', sans-serif;
+.nav>.container{
+    display: flex;
+    justify-content: space-between;
+}
+.nav a{
     font-weight:400;
+    padding-left:0.5em;
+    padding-right:0.5em;
+    height:100%;
+}
+.nav a:hover{
+    text-shadow:0px 0px 10px #FFF;
+}
+button.primary{
+    background-color:#2C3E50;
+    color:#FFF;
+    font-size:1em;
+    padding:0.6em;
+    border-radius:5px;
+}
+button.info{
+    background-color:#3498DB;
+    color:#FFF;
+    font-size:1em;
+    padding:0.6em;
+    border-radius:5px;
+}
+button + button{
+    margin-left:0.2em;
+}
+p + p {
+    margin-bottom:1em;
 }
