Fix font size for very small screens (cough cough iPhones)

--- a/css/style.2.css
+++ b/css/style.2.css
@@ -99,7 +99,7 @@ hr{
     font-weight:600;
 }
 .nav h1{
-    font-size:1.12em;
+    font-size:1.05em;
     font-weight:600;
     margin-bottom:0px;
 }
@@ -326,6 +326,14 @@ a + .label:before{
     }
     .header h1{
         font-size:4em;
+    }
+    .nav>.container{
+        display: flex;
+        justify-content: left;
+        align-items:baseline;
+    }
+    .nav h1{
+        padding-right:1em;
     }
 }
 @media (min-width:1200px){
