--- a/css/style.2.css
+++ b/css/style.2.css
@@ -208,6 +208,8 @@ h1.neon{
     border:5px solid #CCC;
     user-select:none;
     cursor:pointer;
+    opacity:1;
+    transition:opacity 0.5s;
 }
 .project>.image{
     margin:0;
