--- a/css/style.2.css
+++ b/css/style.2.css
@@ -83,9 +83,14 @@ button:active, button:focus{
     width:100%;
 }
 .img{
-    background-image:url(../media/trevor.svg);
-    background-repeat:no-repeat;
-    background-size: 100% 100%;
+    /*background-image:url(../media/trevor.svg);*/
+    /*background-repeat:no-repeat;
+    background-size: 100% 100%;*/
+    margin:0px;
+    padding:0px;
+}
+img{
+    display:block;
 }
 hr{
     border:0.5px solid #CCC;
@@ -96,7 +101,7 @@ hr{
     width:100%;
     padding-top:1.5em;
     padding-bottom:1.5em;
-    background-color:#2C3E50;
+    background-color:#0d4048;
     color:#FFF;
     font-weight:600;
 }
@@ -120,6 +125,10 @@ p.footer{
     padding-left:0.5em;
     padding-right:0.5em;
     height:100%;
+}
+html *::selection{
+    background-color:#33AACC;
+    color:white;
 }
 .nav a:hover{
     text-shadow:0px 0px 10px #FFF;
@@ -162,12 +171,13 @@ button.info, a.info{
     font-size:1em;
     padding:0.6em;
     border-radius:5px;
+    box-shadow:0px 0px 5px #3498DB;
 }
 button, a{
-    transition:background-color var(--transition-time);
+    transition:box-shadow var(--transition-time);
 }
 button.info:hover, a.info:hover{
-    background-color:#2384C6;
+    box-shadow:0px 0px 10px #3498DB;
 }
 button + button, a + a{
     margin-left:0.2em;
@@ -199,6 +209,7 @@ h1.neon{
     background-color:var(--background-color);
     color:#000;
     overflow:hidden;
+    z-index:100000;
 }
 .project{
     background-color:#DDD;
@@ -212,10 +223,17 @@ h1.neon{
     cursor:pointer;
     opacity:1;
     transition:opacity var(--transition-time);
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
 }
 .project>.image{
     margin:0;
     width:100%;
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .project>.title{
     font-weight:600;
@@ -245,7 +263,6 @@ h1.neon{
 .content-container{
     width:100%;
     max-width:100%;
-    margin-bottom:1em;
 }
 #dialog-container{
     position:fixed;
@@ -388,4 +405,37 @@ a + .label:before{
     .header h1{
         font-size:4.5em;
     }
+}
+.image{
+    position:relative;
+}
+@keyframes weirdness{
+    from{
+        filter:hue-rotate(0deg);
+    }
+    to{
+        filter:hue-rotate(360deg);
+    }
+}
+@keyframes weirdness-2{
+    0%{
+        filter:brightness(100%);
+    }
+    50%{
+        filter:brightness(110%);
+    }
+    100%{
+        filter:brightness(100%);
+    }
+}
+.image img.special{
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    animation-name:weirdness;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
